# betting-math-kit

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/betting_math_kit/: __init__.py  devig.py  exceptions.py  kelly.py  metrics.py  odds.py  simulation.py  types.py
tests/: test_devig.py  test_kelly.py  test_metrics.py  test_odds.py  test_simulation.py
